# HybridCVDV-Simulator

./: .gitignore  CMakeLists.txt  README.md  build_and_run.sh  check_ref  gatemath.md  gatesmath.md  implementation.md
baselines/: README.md  compare_results.py  cpu.json  operators_gpu.py  requirements.txt
baselines/bosonic/: CMakeLists.txt  GATE_OPERATIONS_TABLE.md  Makefile  build.sh  compare_performance.py  cupy.json  gate_operations.csv  gpu_performance_results.json  gpu_performance_test.cpp  main.cpp  test_operators_gpu.py
baselines/bosonic/cpu/: operators.cpp  operators.h
baselines/bosonic/gpu/: operators.cu  operators.cuh
circuit/: CMakeLists.txt
circuit/result/: all_circuit_results.csv  cat_state_time_alpha_1_cutoff_16.csv  gkp_state_circuit_rounds_9_cutoff_16.csv  jch_simulation_multi_qubits_2_sites_2_timesteps_5_cutoff_16.csv  jch_simulation_single_qubits_2_sites_2_cutoff_16.csv  qaoa_circuit_qumodes_1_layers_2_cutoff_16.csv  qft_circuit_qubits_5_n_2_a_1_cutoff_16.csv  shors_circuit_N_15_a_2_cutoff_8.csv  state_transfer_CVtoDV_qubits_2_cutoff_16.csv  state_transfer_DVtoCV_qubits_2_cutoff_16.csv  vqe_circuit_qubits_2_qumodes_2_depth_2_cutoff_16.csv
circuit/src/: cat_state_circuit.cpp  gkp_state_circuit.cpp  jch_simulation_circuit.cpp  qaoa_circuit.cpp  qft_circuit.cpp  shors_circuit.cpp  state_transfer_circuit.cpp  vqe_circuit.cpp
docs/: GPU_Installation_and_Usage.md  arch.md  architecture.md  details.md  gatemath.md  noisy_implementation_plan.md  noisy_simulation_strategy.md
examples/: basic_usage.cpp
experiments/: README.md
experiments/configs/: gpu_benchmark_matrix.json  paper_style.py  sc26_scaling.json  single_gpu_experiments.json
experiments/cpp/: single_gpu_experiments.cpp
experiments/exampleplot/: fock_state_wigner.py
experiments/python/: generate_remote_scripts.py  generate_sf_reference.py  run_baseline_backend.py  run_gpu_benchmark_matrix.py  run_single_gpu_experiments.py
experiments/results/benchmark_results/: cv_jch_nm5.json  cv_jch_nm6.json  cv_jch_nm7.json  cv_jch_nm8.json  cv_qaoa_nm5.json  cv_qaoa_nm6.json  cv_qaoa_nm7.json  cv_qaoa_nm8.json  result_sc26_cat_c16.json  result_sc26_cat_c32.json  result_sc26_gkp_c16.json  result_sc26_gkp_c32.json  result_sc26_jch_nq10_nm3_c16.json  result_sc26_jch_nq10_nm3_c32.json  result_sc26_jch_nq10_nm3_c4.json  result_sc26_jch_nq10_nm3_c8.json  result_sc26_jch_nq10_nm4_c16.json  result_sc26_jch_nq10_nm4_c32.json  result_sc26_jch_nq10_nm4_c4.json  result_sc26_jch_nq10_nm4_c8.json  result_sc26_jch_nq10_nm5_c16.json  result_sc26_jch_nq10_nm5_c32.json  result_sc26_jch_nq10_nm5_c4.json  result_sc26_jch_nq10_nm5_c8.json  result_sc26_jch_nq10_nm6_c16.json  result_sc26_jch_nq10_nm6_c32.json  result_sc26_jch_nq10_nm6_c4.json  result_sc26_jch_nq10_nm6_c8.json  result_sc26_jch_nq10_nm7_c16.json  result_sc26_jch_nq10_nm7_c32.json  result_sc26_jch_nq10_nm7_c4.json  result_sc26_jch_nq10_nm7_c8.json  result_sc26_jch_nq3_nm3_c16.json  result_sc26_jch_nq3_nm3_c32.json  result_sc26_jch_nq3_nm3_c4.json  result_sc26_jch_nq3_nm3_c8.json  result_sc26_jch_nq3_nm4_c16.json  result_sc26_jch_nq3_nm4_c32.json  result_sc26_jch_nq3_nm4_c4.json  result_sc26_jch_nq3_nm4_c8.json  (+316 more)
experiments/results/remote-h100-baseline-sc26_baselines_20260316/: mrmustard_jax_cv_qaoa_nm3_c16.json  mrmustard_jax_cv_qaoa_nm4_c16.json  mrmustard_jax_cv_qaoa_nm5_c16.json  mrmustard_jax_cv_qaoa_nm6_c16.json  (+15 more)
experiments/scripts/: launch_gpu_benchmark_matrix_cron.sh  launch_gpu_benchmark_matrix_systemd.sh  profile_nsight_suite.sh  resume_baselines_remote.sh  resume_gpu_baseline_envs.sh  resume_gpu_benchmark_matrix.sh  resume_gpu_benchmark_matrix_systemd.sh  run_gpu_benchmark_matrix.sh  setup_gpu_baseline_envs.sh
include/: batch_scheduler.h  cv_state_pool.h  fock_ell_operator.h  gaussian_circuit.h  gaussian_kernels.h  gaussian_mixture.h  gaussian_state.h  hdd_node.h  memory_pool.h  quantum_circuit.h  squeezing_gate_gpu.h  squeezing_matrix.h  symplectic_math.h  two_mode_gates.h
src/: gates_performance_test.cpp  main.cpp  performance_test.cpp
src/core/: cv_state_pool.cpp  fock_ell_operator.cpp  gaussian_circuit.cpp  gaussian_mixture.cpp  gaussian_projection.cpp  gaussian_state.cpp  hdd_node.cpp  symplectic_math.cpp
src/cpu/: circuit_checkpoint.cpp  circuit_compilation.cpp  circuit_cv_gates.cpp  circuit_execution.cpp  circuit_gate_dispatch.cpp  circuit_hdd_gaussian.cpp  circuit_interaction.cpp  circuit_pairwise_helpers.cpp  circuit_selective_rotation.cpp  circuit_utilities.cpp  quantum_circuit.cpp
src/gpu/: beamsplitter_recursive.cu  debug_creation.cu  diagonal_gates.cu  gaussian_kernels.cu  gpu_context.cu  hybrid_gates.cu  hybrid_interaction_gates.cu  ladder_gates.cu  peer_transfer.cu  qubit_gates.cu  single_mode_gates.cu  single_mode_xzpv_gates.cu  snap_gates.cu  squeezing_gate.cu  stream_pool.cu  two_mode_gates.cu  two_mode_special_gates.cu
src/include/: circuit_internal.h  gpu_context.h  hybrid_gates_internal.h  peer_transfer.h  stream_pool.h
src/memory/: garbage_collector.cpp  memory_pool.cpp
src/noisy/: README.md  gaussian_channels.h  runtime.h  types.h
src/noisy/core/: types.h  (+4 more)
src/reference/: reference_gates.cpp  reference_gates.h  squeezing_matrix.cpp
src/scheduler/: batch_scheduler.cpp  instruction_fusion.cpp
src/test/: test_gpu_context.cpp  test_multi_gpu_integration.cpp  test_multi_gpu_scheduler.cpp  test_multi_gpu_state.cpp  test_peer_transfer.cpp  test_stream_pool.cpp
tests/: test_all_gates.cpp  test_cv_state_pool.cpp  test_diagonal_gates.cpp  test_fock_ell_operator.cpp  test_gates_implementation.cpp  test_gaussian_mixture.cpp  test_gaussian_symplectic.cpp  test_gpu_validation.cpp  test_hdd_node.cpp  test_ladder_gates.cpp  test_number_operator.cpp  test_qubit_gates.cpp  test_sf_precision.cpp  test_sf_single_mode_gates.cpp  test_sf_two_mode_gates.cpp  test_snap_gates.cpp  test_system.cpp  test_validation.cpp
tests/analyze/: cuda_graph_benchmark.cpp  gaussian_mixture_benchmark.cpp  gaussian_order_benchmark.cpp  gpu_precision_report.cpp  profiling_test.cpp  random_circuit_benchmark.cpp  two_mode_tensor_benchmark.cpp
(+214 files in other folders)
